feat: Fix sonar check - EXO-61011 - Meeds-io/MIPs#35
After this fix, we will replace all occurrences of .collect(Collectors.toList()) by .toList().